welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:4: error: type grey is not a member of object java.awt.Color
    if (getCouleurSol():Color.grey) {
                              ^